# 5511-a1-embeddings

./: MODEL_COMPARISON.md  MODEL_COMPARISON_REFACTORING.md  MODULAR_STRUCTURE.md  README.md  SENSITIVITY_ANALYSIS.md  STRUCTURE.md  UMAP_HPO.md  pyproject.toml
data/: classmates.csv
output/: embeddings.json  embeddings_modified.json  umap_hpo_results.csv
src/: config.py  data_comparison.py  data_loader.py  embedding_manager.py  main.py  model_comparison.py  umap_hpo.py  utils.py  visualizer.py
