[project]
name = "assignment1-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "branca",
    "matplotlib",
    "numpy",
    "pandas",
    "pyvis",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sentence-transformers",
    "umap-learn",
]
